--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
               <a class="nav-link" aria-current="page" href="/admin">Admin Page</a>
             </li>
           </ul>
-          <form class="d-flex call-me-form" style="border: 5px solid red;">
+          <form class="d-flex call-me-form">
             <input class="form-control me-2" type="tel" placeholder="Phone number" aria-label="Phone number">
             <button class="btn btn-outline-primary text-nowrap" type="submit">Call me</button>
           </form>
